test_next-20160222/20160223085626/build/defconfig/build_20160223085626_log.txt
test_build: Tue Feb 23 08:57:27 PST 2016: started on defconfig test_next-20160222 (1615dc93be9d922abce871a9ac589bb079247e0b)
test_build: Tue Feb 23 08:57:27 PST 2016: serial is 20160223085626
In file included from include/linux/kvm_host.h:35:0,
                 from arch/arm64/kernel/asm-offsets.c:24:
./arch/arm64/include/asm/kvm_host.h: In function ‘__cpu_init_stage2’:
./arch/arm64/include/asm/kvm_host.h:338:2: error: implicit declaration of function ‘kvm_call_hyp’ [-Werror=implicit-function-declaration]
  kvm_call_hyp(__init_stage2_translation);
  ^
cc1: some warnings being treated as errors
make[1]: *** [arch/arm64/kernel/asm-offsets.s] Error 1
make: *** [prepare0] Error 2
make: *** Waiting for unfinished jobs....
test_build: Tue Feb 23 08:57:32 PST 2016: FAILED on defconfig test_next-20160222
test_build: Tue Feb 23 08:57:32 PST 2016: ended on defconfig test_next-20160222
